--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.18)
 
 set(PROJECT_BIN ld47)
-project(PROJECT_BIN LANGUAGES CXX)
+project(PROJECT_BIN LANGUAGES C CXX)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
@@ -13,5 +13,7 @@ if(APPLE)
 	# Don't know why the above isn't enough..
 	include_directories(/usr/local/include)
 endif()
+
+include_directories(extlib/flecs)
 
 add_subdirectory(src)
