--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,10 @@
 	"editor.insertSpaces": false,
 	"editor.tabSize": 4,
 	"files.trimTrailingWhitespace": true,
-	"C_Cpp.default.configurationProvider": "ms-vscode.cmake-tools"
+	"C_Cpp.default.configurationProvider": "ms-vscode.cmake-tools",
+	"files.associations": {
+		"filesystem": "cpp",
+		"fstream": "cpp",
+		"locale": "cpp"
+	}
 }
