Fix build for Linux

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,5 +10,5 @@ if(APPLE)
 	# Don't know why SFML_LIBRARIES isn't properly populated..
 	target_link_libraries(PROJECT_BIN sfml-graphics sfml-window sfml-system)
 else()
-	target_link_libraries(PROJECT_BIN ${SFML_LIBRARIES})
+	target_link_libraries(PROJECT_BIN ${SFML_LIBRARIES} -lsfml-window -lsfml-system -lsfml-graphics)
 endif()
