Refactored events/input

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_executable(PROJECT_BIN
 	../extlib/flecs/flecs.c
 	main.cpp
+	systems/EventSystem.cpp
 	systems/InputSystem.cpp
 	Context.cpp
 	Ecs.cpp
