--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,12 +1,20 @@
+# Semi-ghetto way to build tmxlite.. Can't figure out ExternalProject_Add for static libs..
+include_directories(${CMAKE_SOURCE_DIR}/extlib/tmxlite/tmxlite/include)
+set(PROJECT_DIR ${CMAKE_SOURCE_DIR}/extlib/tmxlite/tmxlite/src)
+include(${PROJECT_DIR}/CMakeLists.txt)
+
 add_executable(PROJECT_BIN
-	../extlib/flecs/flecs.c
+	${PROJECT_SRC}
+	${CMAKE_SOURCE_DIR}/extlib/flecs/flecs.c
 	main.cpp
 	systems/EventSystem.cpp
 	systems/InputSystem.cpp
 	systems/MovementSystem.cpp
 	systems/SpriteSystem.cpp
+	systems/TileLayerRenderingSystem.cpp
 	Context.cpp
 	Ecs.cpp
+	MapLoader.cpp
 )
 
 if(APPLE)
@@ -15,3 +23,9 @@ if(APPLE)
 else()
 	target_link_libraries(PROJECT_BIN ${SFML_LIBRARIES} -lsfml-window -lsfml-system -lsfml-graphics)
 endif()
+
+# Copy assets to build directory
+add_custom_command(TARGET PROJECT_BIN POST_BUILD
+	COMMAND ${CMAKE_COMMAND} -E copy_directory
+	${CMAKE_SOURCE_DIR}/assets $<TARGET_FILE_DIR:PROJECT_BIN>/assets
+)
