Oopsie in the CMakeLists

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,7 +3,7 @@ include_directories(${CMAKE_SOURCE_DIR}/extlib/tmxlite/tmxlite/include)
 set(PROJECT_DIR ${CMAKE_SOURCE_DIR}/extlib/tmxlite/tmxlite/src)
 include(${PROJECT_DIR}/CMakeLists.txt)
 
-add_executable(PROJECT_BIN
+add_executable(${PROJECT_BIN}
 	${PROJECT_SRC}
 	${CMAKE_SOURCE_DIR}/extlib/flecs/flecs.c
 	main.cpp
@@ -19,13 +19,13 @@ add_executable(PROJECT_BIN
 
 if(APPLE)
 	# Don't know why SFML_LIBRARIES isn't properly populated..
-	target_link_libraries(PROJECT_BIN sfml-graphics sfml-window sfml-system)
+	target_link_libraries(${PROJECT_BIN} sfml-graphics sfml-window sfml-system)
 else()
-	target_link_libraries(PROJECT_BIN ${SFML_LIBRARIES} -lsfml-window -lsfml-system -lsfml-graphics)
+	target_link_libraries(${PROJECT_BIN} ${SFML_LIBRARIES} -lsfml-window -lsfml-system -lsfml-graphics)
 endif()
 
 # Copy assets to build directory
-add_custom_command(TARGET PROJECT_BIN POST_BUILD
+add_custom_command(TARGET ${PROJECT_BIN} POST_BUILD
 	COMMAND ${CMAKE_COMMAND} -E copy_directory
-	${CMAKE_SOURCE_DIR}/assets $<TARGET_FILE_DIR:PROJECT_BIN>/assets
+	${CMAKE_SOURCE_DIR}/assets $<TARGET_FILE_DIR:${PROJECT_BIN}>/assets
 )
