Proper map change triggers from tmx

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -17,6 +17,7 @@ add_executable(${PROJECT_BIN}
 	systems/CameraSystem.cpp
 	systems/CollisionSystem.cpp
 	systems/CollisionSolverSystem.cpp
+	systems/MapChangeSystem.cpp
 	graphics/AnimatedSprite.cpp
 	graphics/Animation.cpp
 	Context.cpp
